err/pkgstack.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pkgstack'...
Compiling './lib/python3.5/site-packages/pkgstack/main.py'...
***   File "./lib/python3.5/site-packages/pkgstack/main.py", line 56
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pkgstack/package.py'...
***   File "./lib/python3.5/site-packages/pkgstack/package.py", line 33
    print params
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pkgstack/vendor'...
Listing './lib/python3.5/site-packages/pkgstack/vendor/lib2x'...
Listing './lib/python3.5/site-packages/pkgstack/vendor/lib2x/yaml'...
Compiling './lib/python3.5/site-packages/pkgstack/vendor/lib2x/yaml/constructor.py'...
***   File "./lib/python3.5/site-packages/pkgstack/vendor/lib2x/yaml/constructor.py", line 130
    except TypeError, exc:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pkgstack/vendor/lib2x/yaml/reader.py'...
***   File "./lib/python3.5/site-packages/pkgstack/vendor/lib2x/yaml/reader.py", line 158
    except UnicodeDecodeError, exc:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pkgstack/vendor/lib2x/yaml/resolver.py'...
***   File "./lib/python3.5/site-packages/pkgstack/vendor/lib2x/yaml/resolver.py", line 174
    re.compile(ur'''^(?:yes|Yes|YES|no|No|NO
                    |true|True|TRUE|false|False|FALSE
                    |on|On|ON|off|Off|OFF)$''', re.X),
                                            
                                                     
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pkgstack/vendor/lib2x/yaml/scanner.py'...
***   File "./lib/python3.5/site-packages/pkgstack/vendor/lib2x/yaml/scanner.py", line 1423
    except UnicodeDecodeError, exc:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pkgstack/vendor/lib3x'...
Listing './lib/python3.5/site-packages/pkgstack/vendor/lib3x/yaml'...
Listing './lib/python3.5/site-packages/pkgstack-0.1.9.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
